# slack_google_calendar_with_LLM

./: .gitignore  .pre-commit-config.yaml  app.py  main.py  ngrok_server.py  pyproject.toml
.github/workflows/: ci.yml
